tests/negative/neg_pr117_uppercase_value_binding.safe
-- Test: neg_pr117_uppercase_value_binding
-- Description: Reference-signal naming requires value bindings to start lowercase.
-- Expected: REJECT source_frontend_error

package neg_pr117_uppercase_value_binding

   type payload is record
      value : integer;

   type payload_ptr is access payload;

   function demo returns integer
      Owner : payload_ptr = new ((value = 1) as payload);
      Total : integer = 0;

      Total = Owner.value;
      return Total;
